objects/ssot__AuthLocationPermitSchedule__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AuthApplicationPlaceId__c</fullName>
        <label>Authorization Application Place</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AuthEndDate__c</fullName>
        <label>Authorization End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__AuthLocationPermitWorkDay__c</fullName>
        <label>Auth Location Permit Work Day</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AuthStartDate__c</fullName>
        <label>Authorization Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Auth Location Access Schedule Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WorkEndTime__c</fullName>
        <label>Work End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__WorkStartTime__c</fullName>
        <label>Work Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1739512777271_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AuthLocationPermitSchedule_AuthAppli_rel</label>
        <referenceTo>ssot__AuthorizationApplicationPlace__dlm</referenceTo>
        <relationshipLabel>AuthLocationPermitSchedule_AuthAppli_rel</relationshipLabel>
        <relationshipName>rel_1739512777271_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>